ngcca-core-server/src/test/resources/application/ingress-2rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  namespace: default
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
#  ingressClassName: nginx
  rules:
    - host: minio-api.k8s-cluster.local
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: minio
                port:
                  number: 9000
    - host: minio-console.k8s-cluster.local
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: minio
                port:
                  number: 9001
